# samify

./: .gitignore  README.md  pyproject.toml
.claude/skills/samify/: SKILL.md
samify/: __init__.py  __main__.py  cli.py  video_io.py
samify/backends/: __init__.py  fal_cloud.py  local.py  replicate_cloud.py
tests/: test_smoke.py  test_unit.py
